# 3DRendering

./: .gitignore  Cargo.toml
rendering/: Cargo.toml
shaders/: fragment_shader.glsl  sierpinski_cpu_fragment.glsl  sierpinski_cpu_vertex.glsl  sierpinski_gpu_vertex.glsl  vertex_shader.glsl
src/: lib.rs
src/setup/: mod.rs  quick_setup.rs
src/types/: ebo.rs  mod.rs  shader.rs  shader_program.rs  vao.rs  vao_builder.rs  vbo.rs
src/types/buffer/: ebo.rs  mod.rs  vao.rs  vao_builder.rs  vbo.rs
src/types/data/: data_layout.rs  data_specification.rs  mod.rs
src/types/linalg/: dimension.rs  matrix.rs
src/types/shader/: mod.rs  shader.rs  shader_program.rs  texture.rs  texture_builder.rs  uniform.rs
