[package]
name = "rendering"
version = "0.1.0"
authors = ["fabianvdW <fabianvonderwarth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
image = "0.23.0"
rand = "0.7"
[dependencies.sdl2]
version = "0.33.0"
features = ["bundled"]

[lib]
name = "lib"
path = "src/lib.rs"
[[bin]]
name = "demo"
path = "src/bin/demo.rs"